# ModelDeck

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-rocm72-nontorch.txt  requirements-rocm72-q4-baseline.txt  requirements-rocm72-q4-gptqmodel.txt
docs/: API_CONTRACT.md  ARCHITECTURE.md  BENCHMARKS.md  BUILD_PLAN.md  COMPATIBILITY_REGISTRY.md  DECISIONS.md  DEMO_ROUTE_HOWTO.md  DIFFUSIONGEMMA_Q4_RELEASE.md  EXISTING_REPOSITORY_FINDINGS.md  MODEL_PROFILE_SCHEMA.md  OPEN_DAY_RUNBOOK.md  REPARTEE_RUNTIMES.md  ROCM_FRAMEWORK_DESKTOP.md  SCENECHAT_DETECTOR_GOVERNED_VISION_PROPOSAL.md  SCENECHAT_QWEN35_QUALIFICATION.md  SECURITY_AND_PRIVACY.md  SPEECHSHIFT_RUNTIMES.md  START_HERE.md  TEST_PLAN.md  THERMAL_THROTTLING_ARCHITECTURE.md  THERMAL_VALIDATION.md  TRUSTED_RUNTIME_MANIFESTS.md  WORKER_PROTOCOL.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
runtime/: requirements-marian-cpu.txt  requirements-moshiko-rocm72.txt  requirements-qwen3-tts-rocm72.txt  requirements-rocm72.txt  requirements-whisper-rocm72.txt
scripts/: benchmark_models.ps1  benchmark_models.py  benchmark_moshiko_stream.py  benchmark_scenechat_profile.ps1  benchmark_scenechat_visual_tokens.ps1  benchmark_scenechat_visual_tokens.py  booth_helpers.psm1  build_frontend.ps1  burn_in_diffusiongemma_selected_preset.ps1  check_environment.ps1  check_environment.sh  check_ports.ps1  check_ports.sh  cutover_v2.ps1  environment_helpers.psm1  evaluate_diffusiongemma_q4.ps1  evaluate_diffusiongemma_q4.py  install_runtime_manifest.ps1  q4_smoke.ps1  (+60 more)
(+201 files in other folders)
