[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "modeldeck"
version = "0.1.0"
description = "Local-first model runtime manager and capability gateway"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psutil>=6,<8",
  "pydantic>=2.10,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.11,<1",
]

[project.scripts]
modeldeck = "modeldeck.__main__:main"
modeldeck-gateway = "modeldeck.gateway.app:main"
modeldeck-probe = "modeldeck.hardware.probe:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/modeldeck"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "hardware: requires physical hardware access",
  "rocm: requires a working ROCm stack",
  "large_model: loads a large local model",
  "long_running: runs an extended stability check",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

